# dirty-waters

./: .gitignore  LICENSE  MANIFEST.in  README.md  flake.nix  journal.md  memo.md  new_release_change.py  notes.json  pyproject.toml  renovate.json  report.md  report1_sample.md  report_s3.md  report_test_diff.md  requirements.txt  setup.cfg  steps.md
.github/: run-formatter.yml
.github/workflows/: publish_on_pypi.yml  run-formatter.yml  run-linter.yml  run-tests.yml  run-type-enforcer.yml  tests.yml
.github/workflows/test_cache/: commit_cache.db  commit_comparison_cache.db  dependency_comparisons.db  get_user_commit_info_cache.sqlite  github_cache.db  github_repo_info.db  maven_deps.db  user_commits.db
Examples/: v1.30.0_v1.31.0_diff_summary.md
differential/: authors_sample.json  collaborator.graphql  dependencies_differences_sample.json
example_reports/: differential_analysis_report_example.md  software_supply_chain_smells_report_example.md  static_analysis_report_example.md  v1.30.0_static_summary.md
repo_stastics/: repository_errors.json  repository_stats.json
tests/: dirty_waters_test.py
tests/expected_outputs/: metamask_v11.1.0_v12.9.0_diff.md  metamask_v11.10.0.md  spoon_v11.1.0.md  spoon_v11.1.1-beta-2_v11.1.1-beta-9_diff.md
tool/: __init__.py  compare_commits.py  compare_packages.py  extract_deps.py  get_pr_info.py  get_pr_review.py  get_user_commit_info.py  github_repo.py  main.py  report_diff.py  report_static.py  requirements.txt  static_analysis.py  tool_config.py  utils.py
tool/database/: github_commit.db  github_prr_data_new.db  github_repo_info_all.db
trace/: v11.6.3_to_v11.7.0_changes_authors.json  v11.6.3_to_v11.7.0_changes_lines_authors.json
wallets/: 11.4.1_extension.txt  11.4.1_extesion_deps_list.txt  11.4.1_extesion_deps_list_gav.txt  7.9.1_mobile_deps_list_gav.txt  bitpay_14.15.2_app.txt  bitpay_14.15.2_app_deps_list.txt  comp_metamask_extension_app_withoutv.txt  compare.py  comparison_result.txt  extract_deps.py  extrat_deps.py  formatted_dependencies.txt
wallets/Metamask/: 11.4.1_extension_deps_list.txt  11.4.1_extension_deps_list_gav.txt  11.4.1_extension_deps_list_gav_without_npm.txt  11.4.1_extension_other_lines.txt  7.9.1_check_warning.txt  7.9.1_mobile.txt  7.9.1_mobile_deps_list.txt  extract_deps.py
wallets/Metamask/deps_github_output/: get_github_repo.py  github_repo_all.txt  manual_inspect_undefined.md
wallets/Metamask/deps_github_output/old/: github_repo_patch.txt  github_repo_unique.txt  github_repos_depsnsamerepo.json
wallets/Metamask/deps_github_output/output/: github_repo_all.txt  github_repo_unique.txt  github_repos_depsnsamerepo.json
wallets/Metamask/deps_list/: 11.4.1_extension_tree_deps_list.txt  11.4.1_extension_tree_deps_list_gav_without_npm.txt  11.4.1_extension_tree_deps_list_gav_without_npm_nopatchdetail.txt  11.4.1_extension_tree_deps_list_nopatchdetail.txt  11.4.1_extension_tree_deps_list_patches.txt  11.4.1_extension_tree_other_lines.txt  extract_deps.py  extract_deps_latest.py  find_patch_count.sh  manual_inspect_patches_11.4.1.md  patch_list.txt
wallets/Metamask/deps_list/Old/: 11.4.1_extension_tree_deps_list_gav.txt
wallets/Metamask/deps_publish_date_old/: publish_date.sh  specificTime.json  specificTime_sorted.json  specific_date.py
wallets/Metamask/other/: comp_metamask_extension_app.txt
wallets/Metamask/repo_stastics/: error_undefine.txt  exceeding_limit_repos.json  github_repos.txt  github_repos_all.txt  github_repos_unique.txt  repository_stats.json  some_error.txt
wallets/Metamask/repo_stastics_old/: commit_contributor.py  github_repos_unique.txt  patch_repos.txt  repository_errors.json  repository_stats_report_contributor_count.md  specific_date.py  stats_summary.py
wallets/Others/: bitpay_14.15.2_app_deps_list_gav.txt  bitpay_14.15.2_warning.txt  comp_bitpay_metamask_app.txt  compare.py
wallets/src_wallets/Keystone-cold-app-M-12.4/app/src/main/java/com/keystone/cold/remove_wallet_mode/helper/setup/: SubstrateCreator.java
wallets/src_wallets/Keystone-cold-app-M-12.4/app/src/main/java/com/keystone/cold/ui/: SplashActivity.java
wallets/src_wallets/Keystone-cold-app-M-12.4/app/src/main/java/com/keystone/cold/ui/fragment/main/near/: NearFormattedTxFragment.java
wallets/src_wallets/Keystone-cold-app-M-12.4/app/src/main/java/com/keystone/cold/viewmodel/tx/: KeystoneTxViewModel.java
wallets/src_wallets/Keystone-cold-app-M-12.4/app/src/main/res/layout/: abi_item.xml  polkadot_tx_confirm.xml
wallets/src_wallets/UniPass-Wallet-JS-unipass-wallet-0.0.16/: .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
wallets/src_wallets/UniPass-Wallet-JS-unipass-wallet-0.0.16/.github/workflows/: changesets.yml  tests.yml
wallets/src_wallets/UniPass-Wallet-JS-unipass-wallet-0.0.16/contracts/tests/: Greeter.sol
wallets/src_wallets/UniPass-Wallet-JS-unipass-wallet-0.0.16/scripts/: parseEnvFile.sh
wallets/src_wallets/metamask-extension-11.4.1/: 11.4.1_dependencies.txt  11.4.1_npm_dependencies.txt  package.json  yarnlock_extract.js
wallets/src_wallets/metamask-extension-11.7.4/: 11.7.4_extension_tree.txt  11.7.4_extension_tree_deps_list_gav.txt  11.7.4_extension_tree_deps_list_gav_without_npm_nopatchdetail.txt  11.7.4_extension_tree_deps_list_nopatchdetail.txt  patch_list.txt
wallets/src_wallets/metamask-mobile-7.9.1/: mobile_7.9.1.txt
