[metadata]
name = dirty-waters
version = 0.1.1
author = CHAINS research project at KTH Royal Institute of Technology
author_email = <raphina@kth.se>
description = Automatically detect software supply chain smells and issues
long_description = file: README.md
long_description_content_type = text/markdown
keywords = software supply chain, ssc, dependencies, npm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    TODO