[metadata]
name = dirty-waters
version = 0.1.1
author = CHAINS research project at KTH Royal Institute of Technology
author_email = <raphina@kth.se>
description = Automatically detect software supply chain smells and issues
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chains-project/dirty-waters
project_urls =
    Bug Tracker = https://github.com/chains-project/dirty-waters/issues
keywords = software supply chain, ssc, dependencies, npm
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    attrs==24.2.0
    cattrs==24.1.2
    certifi==2024.8.30
    charset-normalizer==3.4.0
    exceptiongroup==1.2.2
    idna==3.10
    numpy==2.1.2
    pandas==2.2.3
    platformdirs==4.3.6
    python-dateutil==2.9.0.post0
    pytz==2024.2
    requests==2.32.3
    requests-cache==1.2.1
    six==1.16.0
    tabulate==0.9.0
    tqdm==4.66.5
    typing_extensions==4.12.2
    tzdata==2024.2
    url-normalize==1.4.3
    urllib3==2.2.3

[options.packages.find]
where = .
include = tool*
exclude =
    tests*
    docs*
    example_reports*
